Fix sample text submit populating main lead card for temperature, humidity, and atmospheric pressure

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <div class="jumbotron jumbotron-fluid" style = "max-width: 1000px" >
         <div class="container">
           <h1 class="display-4">London</h1>
-          <p class="lead">Temperature</p>
-          <p class="lead">Humidity</p>
-          <p class="lead">Atmosphere</p>
+          <p class="leadTemp"></p>
+          <p class="leadHumidity"></p>
+          <p class="leadAtmosphere"></p>
         </div>
     </div>
 
