Correct html link for image icons

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <div class="jumbotron jumbotron-fluid" style = "max-width: 1000px" >
         <div class="container">
           <h1 class="display-4">London</h1>
+          <div class = mainIcon>
+          </div>
           <p class="leadTemp"></p>
           <p class="leadHumidity"></p>
           <p class="leadAtmosphere"></p>
