--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 </head>
 
 <body>
-  <header class="container-fluid text-center text-white bg-primary p-2 weather-header">
+  <header class="container-fluid text-center text-white bg-primary p-2 weather-header" style = "position: fixed;">
     <h1>Weather Dashboard</h1>
   </header>
 
   <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 400px">
-    <div class="row">
-      <aside class="col-lg-3 pb-3">
+  <div>
+    <div class="container col-lg-3 pb-3 d-flex min-vh-100 flex-column flex-grow-1 align-items-stretch" style = "position: fixed; max-width: 400px">
         <h2 id="form-heading" class="mt-1 h3 form-label">
           Search for a City:
         </h2>
@@ -39,9 +38,13 @@
           </div>
         </form>
         <div class="list-group" id="history"></div>
-      </aside>
+      </div>
+    </div>
 
-    <div class="jumbotron jumbotron-fluid bg-primary" style = "max-width: 1000px; color: white;" >
+    
+    <br />
+
+    <div class="jumbotron bg-primary d-flex min-vh-40" style = "max-width: 400px; color: white;" >
         <div class="container">
           <h1>
             <p class="cityName" placeholder="CityName"></p>
@@ -53,13 +56,11 @@
         </div>
     </div>
 
-    <div></div>
-
     <div class="card bg-primary" style="width: 18rem; color: white;">
-        <div class="card-body">
+      <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
+      </div>
         <ul class="list-group list-group-flush">
           <p class="leadTemp">
           <p class="leadHumidity"></p>
@@ -67,17 +68,16 @@
           <li class="list-group-item">Dapibus ac facilisis in</li>
           <li class="list-group-item">Vestibulum at eros</li>
         </ul>
-      </div>
+    </div>
 
 
-      <div class="col-lg-9 pb-3">
+      <div class="col-lg-9 pb-3"><p>footer</p>
         <section id="today" class="mt-3" role="region" aria-live="polite"></section>
         <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
       </div>
     </div>
   </div>
   
-  <
 
   <!-- Day.js -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
