--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <input type="text" id="search-input" placeholder="London"
                     aria-labelledby="form-heading" aria-controls="today forecast" />
                   <div class="input-group-append">
-                    <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
+                    <button type="submit" class="btn search-button btn-primary btn-lg btn-block" id="search-button" aria-label="submit search">
                       Search
                     </button>
                       <hr class="hr weather-hr" />
@@ -50,6 +50,7 @@
             </form>
 
             <div class="list-group" id="history">
+              <div id="buttons-view"></div>
               <p>Paris</p>
               <p>Putney</p>
               <p>NYC</p>
@@ -77,6 +78,7 @@
             <div class="container">
               <h1>
                 <p class="cityName" placeholder="CityName"></p>
+                <p class="todaysDate"></p>
               </h1>
               <img class = iconURL >
               <p class="leadTemp"></p>
@@ -96,7 +98,7 @@
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
             <ul class="list-group list-group-flush">
-              <p class="leadTemp">
+              <p class="firstDayTemp">
               <p class="leadHumidity"></p>
               <p class="leadAtmosphere"></p>
               <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -110,7 +112,7 @@
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
             <ul class="list-group list-group-flush">
-              <p class="leadTemp">
+              <p class="secondDayTemp">
               <p class="leadHumidity"></p>
               <p class="leadAtmosphere"></p>
               <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -124,7 +126,7 @@
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
             <ul class="list-group list-group-flush">
-              <p class="leadTemp">
+              <p class="thirdDayTemp">
               <p class="leadHumidity"></p>
               <p class="leadAtmosphere"></p>
               <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -138,7 +140,7 @@
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
             <ul class="list-group list-group-flush">
-              <p class="leadTemp">
+              <p class="fourthDayTemp">
               <p class="leadHumidity"></p>
               <p class="leadAtmosphere"></p>
               <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -152,7 +154,7 @@
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
             <ul class="list-group list-group-flush">
-              <p class="leadTemp">
+              <p class="fifthDayTemp">
               <p class="leadHumidity"></p>
               <p class="leadAtmosphere"></p>
               <li class="list-group-item">Dapibus ac facilisis in</li>
